fix: adjust overflow handling and word break for code snippets

--- a/_sass/addon/syntax.scss
+++ b/_sass/addon/syntax.scss
@@ -56,8 +56,7 @@ html {
     @extend %code-snippet-bg;
   }
 
-  overflow-x: auto;
-  overflow-y: auto;
+  overflow: hidden;
   max-height: min(70vh, 32rem);
   -webkit-overflow-scrolling: touch;
   scrollbar-width: thin;
@@ -118,7 +117,8 @@ html {
 
       pre {
         overflow: visible; /* Fixed iOS safari overflow-x */
-        word-break: normal; /* Fixed iOS safari linenos code break */
+        word-break: break-word;
+        white-space: pre-wrap;
       }
     }
   }
